# picSimu

./: .gitignore  README.md  index.html  picSimu.html  picSimu.sln  picSimu.sln.DotSettings
_framework/: Microsoft.AspNetCore.Components.dll.br  System.Collections.dll.br  System.Linq.dll.br  System.Private.CoreLib.dll.br  System.Runtime.dll.br  System.Text.RegularExpressions.dll.br  blazor.boot.json  blazor.boot.json.br  dotnet.7.0.2.wsitzl05tl.js  dotnet.7.0.4.wsitzl05tl.js  dotnet.7.0.4.wsitzl05tl.js.br  dotnet.wasm.br  picSimu.dll.br
css/: pic-code-highlight.css
js/: parser.js
lst/: TPicSim1.LST  TPicSim12.LST  TPicSim7.LST
picSimu/: DataBindings.cs  Models.cs  Program.cs  _Imports.razor  picSimu.csproj  picSimu.csproj.DotSettings  picSimu.sln  picSimu.webm
picSimu/Data/: WeatherForecast.cs  WeatherForecastService.cs
picSimu/Pages/: Error.cshtml  Error.cshtml.cs  FetchData.razor  Index.cs  Index.razor  Index.razor.cs  Index.razor.css  _Host.cshtml  _Layout.cshtml
picSimu/Properties/: launchSettings.json
picSimu/Shared/: BootstrapCheckbox.razor  HexInput.razor  HexInput.razor.cs  MainLayout.razor  MainLayout.razor.css  NavMenu.razor
picSimu/Simulation/: CircularStack.cs  EEPROM.cs  InstructionDecoder.cs  Lib.cs  Memory.cs  Pic.cs  (+5 more)
picSimu/tree-sitter-pic/: Cargo.toml  WICHTIG.txt  binding.gyp  grammar.js  package-lock.json  package.json  test.js
picSimu/tree-sitter-pic/bindings/node/: binding.cc
picSimu/tree-sitter-pic/src/: grammar.json  node-types.json  parser.c
picSimu/tree-sitter-pic/src/tree_sitter/: parser.h
wasm/: tree-sitter-pic.wasm
(+86 files in other folders)
